[package]
edition = "2021"
name    = "webclient-esp32-rs"
version = "0.1.0"

[[bin]]
name = "webclient-esp32-rs"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32c6"] }

embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
#esp-display-interface-spi-dma = "0.3.0"
# esp-display-interface-spi-dma = { path = "../esp-display-interface-spi-dma"}
esp-bsp = "0.4.1"
# embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
embedded-graphics-framebuf = "0.5.0"
heapless = "0.8.0"
embedded-hal-bus = "0.3.0"
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "06cb5c5", default-features = false }

# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.8.1", features = ["defmt", "esp32c6"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "dns-max-server-count-4",
] }
# static_cell = { version = "2.1.0", features = ["nightly"] }
static_cell = { version = "2.1.0" }
reqwless = { version = "0.13.0", default-features = false, features = [ "embedded-tls", ] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
